force-app/main/default/objects/PostRefreshReplacementPattern__c/PostRefreshReplacementPattern__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PostRefreshReplacementPattern</label>
</CustomObject>