force-app/main/default/objects/PostRefreshReplacementPattern__c/fields/IdList__c.field-meta.xml
<CustomField>
    <fullName>IdList__c</fullName>
    <label>IdList</label>
    <type>TextArea</type>
</CustomField>