force-app/main/default/objects/PostRefreshReplacementPattern__c/fields/MatchPattern__c.field-meta.xml
<CustomField>
    <fullName>MatchPattern__c</fullName>
    <description>Parameter Accepted as below:
{0} = Production Server URL
{1} = Production Org Id
{2} = Individual Id from IdList field</description>
    <label>MatchPattern</label>
    <type>TextArea</type>
</CustomField>