force-app/main/default/objects/PostRefreshReplacementPattern__c/fields/ReplacementPattern__c.field-meta.xml
<CustomField>
    <fullName>ReplacementPattern__c</fullName>
    <description>Paramater Accepted as below: 
{0} = Current Sandbox Server URL 
{1} = Current Sandbox Org Id 
{2} = Individual Id from IdList field
{3} = Current Server Content URL, eg : https://c.cs11.content.force.com</description>
    <label>ReplacementPattern</label>
    <type>TextArea</type>
</CustomField>