force-app/main/default/objects/PostRefreshReplacementPattern__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>1=Document, 2=Email Template</description>
    <label>Type</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>